--- a/config
+++ b/config
@@ -2,7 +2,7 @@
 [keybindings]
 [profiles]
   [[default]]
-    palette = "#2e3436:#abb2bf:#98c379:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
+    palette = "#2e3436:#abb2bf:#98c379:#e5c07b:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#d31f1f:#98c379:#e5c07b:#61afef:#ad7fa8:#34e2e2:#eeeeec"
     background_color = "#282c34"
     background_image = None
     foreground_color = "#ffffff"
