--- a/config
+++ b/config
@@ -1,8 +1,9 @@
 [global_config]
+  title_transmit_bg_color = "#e06c75"
 [keybindings]
 [profiles]
   [[default]]
-    palette = "#2e3436:#abb2bf:#98c379:#e5c07b:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#d31f1f:#98c379:#e5c07b:#61afef:#ad7fa8:#34e2e2:#eeeeec"
+    palette = "#2e3436:#abb2bf:#98c379:#e5c07b:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#e06c75:#98c379:#e5c07b:#61afef:#ad7fa8:#34e2e2:#eeeeec"
     background_color = "#282c34"
     background_image = None
     foreground_color = "#ffffff"
